/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Caila Coates
 */

package ucf.assignments;
/*
The main class will initiate the program
 */

public class App 
{
    public static void main( String[] args )
    {

        //call Start
    }

    public static void Start(){
        /*
        create new file and add fxml path

        parse through the file and display the images

        */
    }
}
