/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Caila Coates
 */

package ucf.assignments;

/*
This class will create a List of lists
Will be able to hold up to 100 lists
Adds To Do Lists here and calls on ToDoList to then create the information within
Can delete To Do Lists
From here you can also load To Do lists and grab To Do Lists from external storage
Here we will also initiate the add and remove lists button
 */


public class ListOfToDoLists {

    public static void main(String[] args) {
          /*

        Use class ToDoList to create a new ToDoList
        call ToDoList and create a newList
         */

    }

    public static void ArrayOfToDoList() {
        /*
        Takes in array of
        Create array of ToDoList of size 100
         */

    }

    public static void DeleteToDoList() {
        //When remove button clicked the chosen array will be removed from the list of shown To-Do Lists
        //Use for if statement


    }

    public static void AddToDoList() {
        //create new To-Do List using class To-Do List
    }

    public static void DisplayToDoList() {
        /*
        Use if then statement so that if status active is clicked
          Will use for loop to run through array of lists to display them all
        Use if status is complete display
        Use if status is incomplete display list
         */
    }

    public static void SaveLists () {
        /*
            Creates external file
            Will load list to an external file and save

         */
    }

    public static void LoadList () {
        /*
            Grabs file from SaveLists on the external storage
            parse through file and load/display the chosen ToDo lists

         */
    }
}